--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,11 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13
+    image: postgres:14
+    container_name: household_db
     environment:
       POSTGRES_USER: household_user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: household_db
     ports:
       - "5432:5432"
-    volumes:
-      - db-data:/var/lib/postgresql/data
-
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-
-volumes:
-  db-data:
