feat: hide JWT secret

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,5 +4,5 @@ jwt {
     domain = "cyan0515.com"
     audience = "myAudience"
     realm = "myRealm"
-    secret = "tempSecret"
+    secret = System.getenv("JWT_SECRET")
 }
