--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: '3.8'
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_NAME=household_db
+      - DB_USER=household_user
+      - DB_PASSWORD=password
+    depends_on:
+      - db
+    networks:
+      - app-network
+
   db:
     image: postgres:14
     container_name: household_db
@@ -10,3 +27,13 @@ services:
       POSTGRES_DB: household_db
     ports:
       - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+volumes:
+  db-data:
+
+networks:
+  app-network:
