--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,5 +4,10 @@ jwt {
     domain = "cyan0515.com"
     audience = "myAudience"
     realm = "myRealm"
-    secret = System.getenv("JWT_SECRET")
+    secret = ${?JWT_SECRET}
+}
+db {
+    url = ${?DB_URL}
+    user = "household_user"
+    password = ${?DB_PASSWORD}
 }
